--- a/studio/index.html
+++ b/studio/index.html
@@ -297,75 +297,75 @@
                             <div class="project__pagination js-project-swiper-pagination"></div>
                             <div class="swiper-wrapper">
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                             </div>
@@ -394,15 +394,15 @@
                             <div class="project__pagination js-project-swiper-pagination"></div>
                             <div class="swiper-wrapper">
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                             </div>
@@ -431,15 +431,15 @@
                             <div class="project__pagination js-project-swiper-pagination"></div>
                             <div class="swiper-wrapper">
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                                 <div class="project__slide swiper-slide">
-                                        <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                        <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                             </div>
@@ -468,7 +468,7 @@
                             <div class="project__pagination js-project-swiper-pagination"></div>
                             <div class="swiper-wrapper">
                                 <div class="project__slide swiper-slide">
-                                    <img class="project__slide-img swiper-lazy" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
+                                    <img class="project__slide-img swiper-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="./img/mockup.webp" data-src="./img/mockup.png" alt="Фото в слайлере">
                                     <div class="swiper-lazy-preloader"></div>
                                 </div>
                             </div>
