--- a/electro/index.html
+++ b/electro/index.html
@@ -14,7 +14,7 @@
                 <a href="./index.html" class="logo">
                     <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="logo__img">
                 </a>
-                <button class="button button_orange button_no-hover services-btn js-services-btn">
+                <div class="button button_orange button_no-hover services-btn js-services-btn">
                     <span class="services-btn__icon">
                         <span></span>
                     </span>
@@ -36,7 +36,7 @@
                             <a href="#" class="services-btn__link">Проектные роботы</a>
                         </li>
                     </ul>
-                </button>
+                </div>
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
@@ -267,24 +267,24 @@
                                 <div class="calc__types">
                                     <label class="calc__type-item active">
                                         <img loading="lazy" src="./img/svg/dom-1.svg" alt="Плоская крыша" class="calc__type-img">
-                                        <div class="calc__type-choose">
+                                        <span class="calc__type-choose">
                                             <input type="radio" name="house_type" value="1" class="calc__type-input js-house-type-input" checked>
                                             <span class="calc__type-fake"></span>
                                             <span class="calc__type-name">Плоская крыша</span>
-                                        </div>
+                                        </span>
                                     </label>
                                     <label class="calc__type-item">
                                         <img loading="lazy" src="./img/svg/dom-2.svg" alt="Двухскатная кровля" class="calc__type-img">
-                                        <div class="calc__type-choose">
+                                        <span class="calc__type-choose">
                                             <input type="radio" name="house_type" value="2" class="calc__type-input js-house-type-input">
                                             <span class="calc__type-fake"></span>
                                             <span class="calc__type-name">Двухскатная кровля</span>
-                                        </div>
+                                        </span>
                                     </label>
                                 </div>
                             </div>
                             <div class="calc__item">
-                                <h3 class="calc__title">Введите параметры Вашего дома (в сантиметрах):</h3>
+                                <h3 class="calc__title">Введите параметры Вашего дома (в метрах):</h3>
                                 <div class="calc__house-type js-house-type active">
                                     <span class="calc__subtitle">a&nbsp;-&nbsp;длинна, b&nbsp;-&nbsp;ширина, h1&nbsp;-&nbsp;высота, h2&nbsp;-&nbsp;высота</span>
                                     <div class="calc__inputs">
