--- a/electro/index.html
+++ b/electro/index.html
@@ -360,12 +360,11 @@
                                 <button class="button button_orange calc__form-button">Оформить заявку</button>
                             </div>
                         </form>
-                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="benefits">
+        <div class="benefits">
             <div class="container">
                 <div class="benefits__wrap">
                     <article class="benefits-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="0">
@@ -385,7 +384,7 @@
                     </article>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="index-about">
             <picture>
                 <source srcset="./img/index-about-bg.wepb" type="image/wepb">
